# controllers/auth.go
@@ -6,6 +6,7 @@ import (
 	"time"
 
 	"github.com/frullah/gin-boilerplate/db"
+	"golang.org/x/crypto/bcrypt"
 
 	"github.com/jinzhu/gorm"
 
@@ -41,29 +42,30 @@ const (
 )
 
 var (
+	bcryptCost = 12
+
 	accessTokenSecret  = []byte("auth-token-secret")
 	refreshTokenSecret = []byte("refresh-token-secret")
 
 	refreshTokenChecker = jwtCheck(refreshTokenSecret)
 	accessTokenChecker  = jwtCheck(accessTokenSecret)
 
-	errForbidden          = errors.New("Resource access is forbidden")
-	errUnauthorized       = errors.New("Authorization is needed")
 	errInvalidTokenMethod = jwt.NewValidationError(
 		"Invalid method",
 		jwt.ValidationErrorUnverifiable,
 	)
 	errEmptyToken = errors.New("Empty token")
 
-	jsonErrInvalidAuthorization = makeSimpleJSONError("invalid authorization")
-	jsonErrNeedAuthorization    = makeSimpleJSONError("need authorization")
-	jsonErrUserDisabled         = makeSimpleJSONError("user disabled")
+	jsonErrInvalidAuthorization = jsonError("Invalid authorization")
+	jsonErrUnauthorized         = jsonError("Unauthorized")
+	jsonErrUserDisabled         = jsonError("User disabled")
 )
 
 // LoadAuthRoutes to engine
 func LoadAuthRoutes(router *gin.Engine) {
 	group := router.Group("/auth")
 	group.POST("/login", AuthLogin)
+	group.GET("/google/v2/")
 }
 
 // AuthLogin handle POST /auth/login
@@ -76,19 +78,21 @@ func AuthLogin(ctx *gin.Context) {
 
 	user := models.User{}
 	if err := db.Get(db.Default).
-		Select("id, password, is_enabled").
+		Select("id, password, enabled").
 		First(&user, "username = ?", body.Username).
 		Error; err != nil {
 		if err == gorm.ErrRecordNotFound {
 			ctx.AbortWithStatus(http.StatusUnauthorized)
 		} else {
-			abortWithError(ctx, err, gin.ErrorTypePrivate)
+			ctx.Error(err)
+			ctx.Abort()
 		}
 		return
 	}
 
-	if !user.IsEnabled {
-		abortWithString(ctx, http.StatusForbidden, jsonErrUserDisabled)
+	if !user.Enabled {
+		ctx.String(http.StatusForbidden, jsonErrUserDisabled)
+		ctx.Abort()
 		return
 	}
 
@@ -104,63 +108,76 @@ func AuthLogin(ctx *gin.Context) {
 }
 
 // AuthRolesMiddleware function
-func AuthRolesMiddleware(roles map[string]struct{}) func(*gin.Context) {
+func AuthRolesMiddleware(allowedRoles map[string]struct{}) func(*gin.Context) {
 	return func(ctx *gin.Context) {
+		decoded, err := shouldParseJWT(ctx, accessTokenHeader, accessTokenChecker)
+		if err == errEmptyToken || err == errInvalidTokenMethod || decoded == nil {
+			return
+		}
+		accessClaims := decoded.Claims.(*JWTClaims)
+		if err != nil {
+			decoded, err := shouldParseJWT(ctx, refreshTokenHeader, refreshTokenChecker)
+			if err != nil || decoded == nil || !decoded.Valid {
+				return
+			}
+			refreshClaims := decoded.Claims.(*JWTClaims)
+			if refreshClaims.UserID != accessClaims.UserID {
+				ctx.String(http.StatusUnauthorized, jsonErrInvalidAuthorization)
+				ctx.Abort()
+				return
+			}
 
+			user := models.User{}
+			if err := db.Get(db.Default).
+				Select("enabled, password").
+				First(&user, refreshClaims.UserID).
+				Error; err != nil {
+				ctx.Error(err)
+				ctx.Abort()
+				return
+			}
+
+			if !user.Enabled {
+				ctx.String(http.StatusUnauthorized, jsonErrUserDisabled)
+				ctx.Abort()
+				return
+			}
+
+			ctx.Header(accessTokenHeader, makeAccessToken(accessClaims.UserID))
+			ctx.Header(
+				refreshTokenHeader,
+				makeRefreshToken(refreshClaims.UserID, user.Password),
+			)
+		}
+
+		if allowedRoles != nil {
+			role := models.UserRole{}
+			db.Get(db.Default).
+				Table("user").
+				Select("user_role.name").
+				Joins("INNER JOIN user ON user_role.id = user.role_id").
+				First(&role, accessClaims.UserID)
+			if _, ok := allowedRoles[role.Name]; !ok {
+				return
+			}
+		}
+
+		ctx.Set("userID", accessClaims.UserID)
+		ctx.Next()
 	}
-}
-
-// AuthMiddleware ...
-func AuthMiddleware(ctx *gin.Context) {
-	decoded, err := shouldParseJWT(ctx, accessTokenHeader, accessTokenChecker)
-	if err == errEmptyToken || err == errInvalidTokenMethod || decoded == nil {
-		return
-	}
-	accessClaims := decoded.Claims.(*JWTClaims)
-	if err != nil {
-		decoded, err := shouldParseJWT(ctx, refreshTokenHeader, refreshTokenChecker)
-		if err != nil || decoded == nil || !decoded.Valid {
-			return
-		}
-		refreshClaims := decoded.Claims.(*JWTClaims)
-		if refreshClaims.UserID != accessClaims.UserID {
-			abortWithString(ctx, http.StatusUnauthorized, jsonErrInvalidAuthorization)
-			return
-		}
-
-		user := models.User{Role: &models.UserRole{}}
-		if err := db.Get(db.Default).
-			Select("is_enabled, password, role_id").
-			Joins("JOIN user_role ON user_role.id = user.role_id").
-			First(&user, refreshClaims.UserID).
-			Error; err != nil {
-			abortWithError(ctx, err, gin.ErrorTypePrivate)
-			return
-		}
-		if !user.IsEnabled {
-			abortWithString(ctx, http.StatusUnauthorized, jsonErrUserDisabled)
-			return
-		}
-		ctx.Header(accessTokenHeader, makeAccessToken(accessClaims.UserID))
-		ctx.Header(
-			refreshTokenHeader,
-			makeRefreshToken(refreshClaims.UserID, user.Password),
-		)
-	}
-
-	ctx.Set("userID", accessClaims.UserID)
-	ctx.Next()
 }
 
 func shouldParseJWT(ctx *gin.Context, headerKey string, tokenChecker jwt.Keyfunc) (*jwt.Token, error) {
 	token := ctx.GetHeader(headerKey)
 	if token == "" {
-		abortWithString(ctx, http.StatusUnauthorized, jsonErrNeedAuthorization)
+		ctx.String(http.StatusUnauthorized, jsonErrUnauthorized)
+		ctx.Abort()
 		return nil, errEmptyToken
 	}
 	decoded, err := jwt.ParseWithClaims(token, &JWTClaims{}, tokenChecker)
 	if _, ok := err.(*jwt.ValidationError); ok {
-		abortWithString(ctx, http.StatusUnauthorized, jsonErrInvalidAuthorization)
+		ctx.String(http.StatusUnauthorized, jsonErrInvalidJSONBody)
+		ctx.Abort()
 	}
 	return decoded, err
 }
@@ -172,4 +189,31 @@ func jwtCheck(secret []byte) jwt.Keyfunc {
 		}
 		return secret, nil
 	}
+}
+
+func comparePassword(hashedPassword, password []byte) bool {
+	err := bcrypt.CompareHashAndPassword(hashedPassword, password)
+	return err == nil
+}
+
+func makeJWT(userID uint64, duration time.Duration, secret []byte) string {
+	currentTime := time.Now()
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, JWTClaims{
+		jwt.StandardClaims{
+			ExpiresAt: currentTime.Add(duration).Unix(),
+			IssuedAt:  currentTime.Unix(),
+		},
+		userID,
+	})
+
+	tokenString, _ := token.SignedString(secret)
+	return tokenString
+}
+
+func makeAccessToken(userID uint64) string {
+	return makeJWT(userID, accessTokenDuration, accessTokenSecret)
+}
+
+func makeRefreshToken(userID uint64, pwHash string) string {
+	return makeJWT(userID, refreshTokenDuration, append(refreshTokenSecret, pwHash...))
 }
