# controllers/user.go
@@ -1,141 +1,194 @@
 package controllers
 
 import (
+	"database/sql"
 	"net/http"
+	"strings"
+
+	"github.com/gin-gonic/gin/binding"
 
 	"github.com/frullah/gin-boilerplate/db"
-
-	// "gopkg.in/go-playground/validator.v9"
 
 	"github.com/gin-gonic/gin"
 
 	"github.com/frullah/gin-boilerplate/models"
 )
 
-// UserPostParams struct
-type UserPostParams struct {
-	Email     string `json:"email" binding:"required,email"`
-	Username  string `json:"username" binding:"required,min=5,max=64"`
-	Password  string `json:"password" binding:"required,min=5,max=64"`
-	Name      string `json:"name" binding:"required,max=64"`
-	RoleID    uint32 `json:"roleId" binding:"required,min=1"`
-	IsEnabled bool   `json:"isEnabled"`
-}
-
-// UserRegisterParams struct
-type UserRegisterParams struct {
-	Email    string `json:"email" binding:"required,email"`
-	Username string `json:"username" binding:"required,min=5,max=64"`
-	Password string `json:"password" binding:"required,min=5,max=64"`
-	Name     string `json:"name" binding:"required,max=64"`
-}
-
-// UserUpdateBody struct
-type UserUpdateBody struct {
-	Email     string `json:"email,omitempty" binding:"omitempty,email"`
-	Username  string `json:"username,omitempty" binding:"omitempty,min=5,max=64"`
-	Password  string `json:"password,omitempty" binding:"omitempty,min=5,max=64"`
-	Name      string `json:"name,omitempty" binding:"omitempty,max=64"`
-	RoleID    uint32 `json:"roleId,omitempty" binding:"omitempty,min=1"`
-	IsEnabled bool   `json:"isEnabled,omitempty"`
-}
-
-// UserUpdateParams struct
-type UserUpdateParams struct {
-	ID uint64 `uri:"id"`
-	UserUpdateBody
-}
-
 // LoadUserRoutes to router
 func LoadUserRoutes(engine *gin.Engine) {
 	engine.POST(registerURL, UserRegister)
+	engine.GET("/user-availibility", UserAvailibility)
 
 	group := engine.Group(userURL)
 	authorized := group.Group("")
-	authorized.Use(AuthMiddleware)
+	authorized.Use(
+		AuthRolesMiddleware(map[string]struct{}{
+			"admministrator": {},
+		}),
+	)
 	authorized.GET(":id", UserGetOne)
 	authorized.PUT(":id", UserUpdate)
 	authorized.DELETE(":id", UserDelete)
 	authorized.POST("", UserCreateOne)
 }
 
-// UserGetOne handle GET /users/:id
+// UserAvailibility check the username or email is available to register
+func UserAvailibility(c *gin.Context) {
+	var data interface{}
+	qCtx := c.Query("context")
+	value := c.Query("value")
+
+	switch strings.ToUpper(qCtx) {
+	case "USERNAME":
+		data = &struct {
+			Value string `json:"value" binding:"required,min=4,max=64"`
+		}{value}
+	case "EMAIL":
+		data = &struct {
+			Value string `json:"value" binding:"required,email"`
+		}{value}
+	default:
+		c.String(http.StatusBadRequest, jsonError("context must be an email or username"))
+		c.Abort()
+		return
+	}
+
+	if err := binding.Validator.ValidateStruct(data); err != nil {
+		c.Error(err).SetType(gin.ErrorTypeBind)
+		c.Abort()
+		return
+	}
+
+	exists := false
+	query := "SELECT 1 FROM `user` WHERE " + qCtx + " = ?"
+	err := db.Get(db.Default).Raw(query, value).Row().Scan(&exists)
+	if err != nil && err != sql.ErrNoRows {
+		c.Error(err)
+		c.Abort()
+		return
+	}
+
+	c.String(http.StatusOK, jsonSuccess(struct {
+		Available bool `json:"available"`
+	}{!exists}))
+}
+
+// UserGetOne docs
+// @Success 200 {object} models.User
+// @Failure 401
+// @Failure 403
+// @Router /users [post]
 func UserGetOne(ctx *gin.Context) {
-	id, err := parseUintParam(ctx, "id", 64)
+	id, err := mustParseUintParam(ctx, "id", 64)
 	if err != nil {
 		return
 	}
 
 	user := &models.User{Role: &models.UserRole{}}
 	if err := db.Get(db.Default).
+		Select("id, email, username, name, enabled").
 		First(user, id).
 		Related(user.Role, "Role").
 		Error; err != nil {
-		abortWithError(ctx, err, gin.ErrorTypePrivate)
+		ctx.Error(err)
+		ctx.Abort()
 		return
 	}
 
 	ctx.JSON(http.StatusOK, user)
 }
 
-// UserCreateOne handler POST /users
+// UserCreateOne docs
+// @Accept json
+// @Success 200 {object} models.User
+// @Failure 401
+// @Failure 403
+// @Router /users [post]
 func UserCreateOne(ctx *gin.Context) {
-	data := UserPostParams{}
+	data := struct {
+		Email    string `json:"email" binding:"required,email"`
+		Username string `json:"username" binding:"required,min=5,max=64"`
+		Password string `json:"password" binding:"required,min=5,max=64"`
+		Name     string `json:"name" binding:"required,max=64"`
+		RoleID   uint32 `json:"roleId" binding:"required,min=1"`
+		Enabled  bool   `json:"enabled"`
+	}{}
 	if err := ctx.BindJSON(&data); err != nil {
 		return
 	}
 
 	user := models.User{
-		Email:     data.Email,
-		Username:  data.Username,
-		Password:  data.Password,
-		Name:      data.Name,
-		RoleID:    data.RoleID,
-		IsEnabled: data.IsEnabled,
-		Verified:  true,
+		Email:    data.Email,
+		Username: data.Username,
+		Password: data.Password,
+		Name:     data.Name,
+		RoleID:   data.RoleID,
+		Enabled:  data.Enabled,
+		Verified: true,
 	}
 	if err := db.Get(db.Default).
 		Model(&user).
 		Create(&user).
 		Error; err != nil {
-		abortWithError(ctx, err, gin.ErrorTypePrivate)
+		ctx.Error(err)
+		ctx.Abort()
 		return
 	}
 
-	ctx.JSON(http.StatusOK, CreateBigDataResponse{ID: user.ID})
+	ctx.String(http.StatusOK, jsonSuccess(Uint64ID{ID: user.ID}))
 }
 
-// UserUpdate handle PUT /users/:id
+// UserUpdate docs
+// @Accept json
+// @Param id path int true "User ID"
+// @Param body body models.User true "User ID"
+// @Success 200 {object} models.User
+// @Failure 401
+// @Failure 403
+// @Router /users/{id} [put]
 func UserUpdate(ctx *gin.Context) {
-	id, err := parseUintParam(ctx, "id", 64)
+	id, err := mustParseUintParam(ctx, "id", 64)
 	if err != nil {
 		return
 	}
 
-	body := UserUpdateBody{}
+	body := struct {
+		Email    string `json:"email,omitempty" binding:"omitempty,email"`
+		Username string `json:"username,omitempty" binding:"omitempty,min=5,max=64"`
+		Password string `json:"password,omitempty" binding:"omitempty,min=5,max=64"`
+		Name     string `json:"name,omitempty" binding:"omitempty,max=64"`
+		RoleID   uint32 `json:"roleId,omitempty" binding:"omitempty,min=1"`
+		Enabled  bool   `json:"enabled,omitempty"`
+	}{}
 	ctx.ShouldBindJSON(&body)
 
 	updatedUser := models.User{
-		ID:        id,
-		Email:     body.Email,
-		Username:  body.Username,
-		Password:  body.Password,
-		Name:      body.Name,
-		RoleID:    body.RoleID,
-		IsEnabled: body.IsEnabled,
+		ID:       id,
+		Email:    body.Email,
+		Username: body.Username,
+		Password: body.Password,
+		Name:     body.Name,
+		RoleID:   body.RoleID,
+		Enabled:  body.Enabled,
 	}
 	if err := db.Get(db.Default).
 		Model(&updatedUser).
 		UpdateColumns(&updatedUser).
 		Error; err != nil {
-		abortWithError(ctx, err, gin.ErrorTypePrivate)
+		ctx.Error(err)
+		ctx.Abort()
 		return
 	}
 }
 
-// UserDelete handle DELETE /users/:id
+// UserDelete docs
+// @Param id path int true "User ID"
+// @Success 200 {object} models.User
+// @Failure 401
+// @Failure 403
+// @Router /users{id} [delete]
 func UserDelete(ctx *gin.Context) {
-	id, err := parseUintParam(ctx, "id", 64)
+	id, err := mustParseUintParam(ctx, "id", 64)
 	if err != nil {
 		return
 	}
@@ -143,15 +196,22 @@ func UserDelete(ctx *gin.Context) {
 	if err := db.Get(db.Default).
 		Delete(&models.User{}, id).
 		Error; err != nil {
-		abortWithError(ctx, err, gin.ErrorTypePrivate)
+		ctx.Error(err)
+		ctx.Abort()
 		return
 	}
 }
 
 // UserRegister handles POST /users/register
 func UserRegister(ctx *gin.Context) {
-	data := UserRegisterParams{}
+	data := struct {
+		Email    string `json:"email" binding:"required,email"`
+		Username string `json:"username" binding:"required,min=5,max=64"`
+		Password string `json:"password" binding:"required,min=5,max=64"`
+		Name     string `json:"name" binding:"required,max=64"`
+	}{}
 	if err := ctx.BindJSON(&data); err != nil {
+		ctx.Error(err)
 		return
 	}
 
@@ -165,9 +225,10 @@ func UserRegister(ctx *gin.Context) {
 		Model(&newUser).
 		Create(&newUser).
 		Error; err != nil {
-		abortWithError(ctx, err, gin.ErrorTypePrivate)
+		ctx.Error(err)
+		ctx.Abort()
 		return
 	}
 
-	ctx.JSON(http.StatusOK, CreateDataResponse{ID: int(newUser.ID)})
+	ctx.JSON(http.StatusOK, IntID{ID: int(newUser.ID)})
 }
